# SYNAPSE-CORE

./: .gitignore  AGENTS.md  README.md  context7.json  pr_description.md  requirements.txt  setup.cfg  snake.py  test_script.sh  update_cargo.sh
SYNAPSE-CORE/: .env.example  .gitignore  Makefile  README.md  requirements.txt  setup.py
SYNAPSE-CORE/.github/: PULL_REQUEST_TEMPLATE.md
SYNAPSE-CORE/.github/workflows/: pr-check.yml  python-app.yml
SYNAPSE-CORE/core/: broker_config.py  logger.py  utils.py
SYNAPSE-CORE/deployment/: docker-compose.yml  launch_nodes.sh
SYNAPSE-CORE/nodes/hybrids/: logic_router.py
SYNAPSE-CORE/nodes/publishers/: angler_watchdog.py  serial_listener.py
SYNAPSE-CORE/nodes/subscribers/: desk_led_flasher.py  termux_haptic_engine.py
SYNAPSE-CORE/src/synapse/core/: __init__.py  broker_config.py  logger.py  utils.py
SYNAPSE-CORE/src/synapse/nodes/hybrids/: logic_router.py
SYNAPSE-CORE/src/synapse/nodes/publishers/: angler_watchdog.py  serial_listener.py
SYNAPSE-CORE/src/synapse/nodes/subscribers/: desk_led_flasher.py  termux_haptic_engine.py
SYNAPSE-CORE/tests/performance/: test_payload_benchmark.py
SYNAPSE-CORE/tests/unit/: test_utils.py
synapse/: Cargo.toml
synapse/src/: lib.rs  main.rs
synapse/src/horizon/: bus.rs  mod.rs
synapse/src/payloads/: mod.rs
synapse/src/telemetry/: mod.rs
synapse/src/wal/: mod.rs
