[package]
name = "synapse"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-or-later"

[dependencies]
bincode = "1.3.3"
chrono = { version = "0.4.44", features = ["serde"] }
memmap2 = "0.9.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.138", features = ["raw_value"] }
bytes = "1.5"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
